Revert "Bug 1981063 - Remove unnecessary stanzas for desktop-launcher tests. r=firefox-build-system-reviewers,cdupuis,sergesanspaille" for causing L10n bustages
This reverts commit 7c4c01f032d1fa709db86d662f629729ce74f107.

Revert "Bug 1981063 - Consistently enable desktop launcher in artifact vs. normal builds. r=firefox-build-system-reviewers,cdupuis,browser-installer-reviewers,sergesanspaille"

This reverts commit 977d1ecafcd443cdd1a52e79d668ce015bee6f7d.

UltraBlame original commit: 008cce8390faeef88d165c1579e23bb33e748264

--- a/browser/installer/windows/nsis/defines.nsi.in
+++ b/browser/installer/windows/nsis/defines.nsi.in
@@ -732,8 +732,26 @@ MOZ_MAINTENANCE_SERVICE
 #
 endif
 #
+Only
+build
+on
+platforms
+that
+have
+WinHTTP
+.
+h
+(
+i
+.
+e
+.
+not
+mingw
+)
+#
 ifdef
-DESKTOP_LAUNCHER_ENABLED
+HAVE_WINHTTP_H
 !
 define
 DESKTOP_LAUNCHER_ENABLED
