Bug 1995058 - set xpcshell timeout factors per platform, r=jmaher.
Differential Revision: https://phabricator.services.mozilla.com/D269182

UltraBlame original commit: 7b03d723a483296077fa7b959e21671db8031340

--- a/taskcluster/kinds/test/xpcshell.yml
+++ b/taskcluster/kinds/test/xpcshell.yml
@@ -841,6 +841,110 @@ test
 -
 platform
 :
+android
+-
+em
+-
+14
+.
+*
+:
+2
+linux2404
+-
+64
+-
+asan
+/
+opt
+:
+2
+linux2404
+-
+64
+-
+ccov
+/
+opt
+:
+4
+linux2404
+-
+64
+-
+tsan
+/
+opt
+:
+3
+linux2404
+-
+64
+/
+debug
+:
+2
+linux2204
+-
+64
+-
+wayland
+/
+debug
+:
+2
+macosx1015
+-
+64
+.
+*
+:
+6
+macosx1470
+-
+64
+/
+debug
+:
+6
+macosx1470
+-
+64
+.
+*
+/
+opt
+:
+4
+windows
+.
+*
+/
+debug
+:
+2
+windows11
+-
+64
+-
+24h2
+-
+asan
+/
+opt
+:
+2
+windows11
+-
+64
+-
+24h2
+-
+ccov
+/
+opt
+:
+3
 default
 :
 1
