Bug 1995058 - set requesttimeoutfactor annotations for xpcshell tests that exceed the new 30s default timeout, r=jmaher,necko-reviewers,extension-reviewers,dom-storage-reviewers,migration-reviewers,toolkit-telemetry-reviewers,sthompson,janv,valentin,robwu,janerik.
Differential Revision: https://phabricator.services.mozilla.com/D269184

UltraBlame original commit: 560c2aa14714137050d73edb84298290dff742c6

--- a/browser/components/urlbar/tests/quicksuggest/unit/xpcshell.toml
+++ b/browser/components/urlbar/tests/quicksuggest/unit/xpcshell.toml
@@ -90,6 +90,13 @@ test_merinoClient_sessions
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 [
 "
 test_quicksuggest
@@ -97,6 +104,13 @@ test_quicksuggest
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
 [
 "
 test_quicksuggest_addons
@@ -221,6 +235,15 @@ test_quicksuggest_offlineDefault
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 [
 "
 test_quicksuggest_relevanceRanking
@@ -256,6 +279,15 @@ test_quicksuggest_yelp
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 [
 "
 test_quicksuggest_yelp_ml
