--- a/dom/indexedDB/test/unit/xpcshell-parent-process.toml
+++ b/dom/indexedDB/test/unit/xpcshell-parent-process.toml
@@ -225,6 +225,13 @@ test_clear_object_store_with_indexes
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 run
 -
 sequentially
@@ -569,6 +576,15 @@ test_temporary_storage
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 skip
 -
 if
