--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -889,6 +889,17 @@ test_backgroundfilesaver
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+macOS
+debug
+and
+Android
+debug
 [
 "
 test_be_conservative
@@ -3151,6 +3162,13 @@ test_cookies_async_failure
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 run
 -
 sequentially
@@ -3294,6 +3312,13 @@ test_cookies_thirdparty
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+macOS
 [
 "
 test_cookies_upgrade_10
@@ -3702,6 +3727,13 @@ test_dooh
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 head
 =
 "
@@ -4318,6 +4350,15 @@ test_http2_proxy_concurrent_stream
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+Linux
+and
+Windows
 skip
 -
 if
@@ -5660,6 +5701,15 @@ test_http3_error_before_connect
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
+and
+Windows
 run
 -
 sequentially
@@ -5791,6 +5841,13 @@ test_http3_fast_fallback
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
 run
 -
 sequentially
@@ -6227,6 +6284,13 @@ test_http3_network_change
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
 run
 -
 sequentially
@@ -6941,6 +7005,13 @@ test_http3_server_not_existing
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
 run
 -
 sequentially
@@ -10223,6 +10294,15 @@ test_trr
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 head
 =
 "
@@ -10562,6 +10642,13 @@ test_trr_https_fallback
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+Linux
 run
 -
 sequentially
