--- a/toolkit/components/backgroundtasks/tests/xpcshell/xpcshell.toml
+++ b/toolkit/components/backgroundtasks/tests/xpcshell/xpcshell.toml
@@ -52,6 +52,13 @@ test_backgroundtask_automaticrestart
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 run
 -
 if
@@ -80,6 +87,13 @@ test_backgroundtask_exitcodes
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 [
 "
 test_backgroundtask_experiments
@@ -87,6 +101,15 @@ test_backgroundtask_experiments
 js
 "
 ]
+requesttimeoutfactor
+=
+6
+#
+Slow
+on
+Linux
+and
+Windows
 tags
 =
 "
@@ -153,6 +176,13 @@ test_backgroundtask_no_output
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 skip
 -
 if
@@ -231,6 +261,15 @@ test_backgroundtask_removeDirectory
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+Linux
+and
+Windows
 skip
 -
 if
@@ -334,6 +373,13 @@ test_backgroundtask_update_sync_manager
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 [
 "
 test_backgroundtasksutils
