--- a/toolkit/components/cleardata/tests/unit/xpcshell.toml
+++ b/toolkit/components/cleardata/tests/unit/xpcshell.toml
@@ -78,6 +78,13 @@ test_basic
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+condprof
 [
 "
 test_bounce_tracking_protection
@@ -118,6 +125,14 @@ test_content_preferences
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+Linux
+condprof
 [
 "
 test_cookie_banner_handling
@@ -192,6 +207,14 @@ test_quota
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+Linux
+condprof
 [
 "
 test_security_settings
@@ -206,6 +229,13 @@ test_shutdown_exception_permission
 js
 "
 ]
+requesttimeoutfactor
+=
+4
+#
+Slow
+on
+condprof
 [
 "
 test_storage_permission
