--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.toml
@@ -75,6 +75,20 @@ useDownloadDir
 true
 "
 ]
+#
+Extension
+tests
+frequently
+take
+more
+than
+the
+default
+30s
+timeout
+requesttimeoutfactor
+=
+2
 [
 "
 test_ChannelWrapper
@@ -283,6 +297,21 @@ test_ext_background_early_shutdown
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
+TSan
+/
+ASan
+(
+replaces
+manifest
+2x
+)
 run
 -
 sequentially
@@ -1251,6 +1280,19 @@ test_ext_dnr_dynamic_rules
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
+debug
+(
+replaces
+manifest
+2x
+)
 run
 -
 sequentially
@@ -1894,6 +1936,18 @@ test_ext_geckoProfiler_control
 js
 "
 ]
+requesttimeoutfactor
+=
+9
+#
+Slow
+on
+Windows
+(
+replaces
+manifest
+2x
+)
 skip
 -
 if
