--- a/toolkit/components/extensions/test/xpcshell/xpcshell-remote.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-remote.toml
@@ -118,6 +118,20 @@ remote
 webextensions
 "
 #
+Extension
+tests
+frequently
+take
+more
+than
+the
+default
+30s
+timeout
+requesttimeoutfactor
+=
+2
+#
 Make
 sure
 that
