--- a/toolkit/components/nimbus/test/unit/xpcshell.toml
+++ b/toolkit/components/nimbus/test/unit/xpcshell.toml
@@ -225,6 +225,15 @@ test_ExperimentManager_prefs
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Linux
+and
+Windows
 skip
 -
 if
@@ -294,6 +303,13 @@ test_RemoteSettingsExperimentLoader_updateRecipes
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 [
 "
 test_TargetingContextRecorder
@@ -301,6 +317,13 @@ test_TargetingContextRecorder
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 skip
 -
 if
@@ -338,6 +361,14 @@ test_nimbusTelemetry
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Windows
+msix
 [
 "
 test_policy
@@ -352,6 +383,15 @@ test_prefFlips
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 skip
 -
 if
