--- a/toolkit/components/telemetry/tests/unit/xpcshell.toml
+++ b/toolkit/components/telemetry/tests/unit/xpcshell.toml
@@ -197,6 +197,13 @@ test_CoveragePing
 js
 "
 ]
+requesttimeoutfactor
+=
+5
+#
+Slow
+on
+Android
 [
 "
 test_EventPing
@@ -204,6 +211,13 @@ test_EventPing
 js
 "
 ]
+requesttimeoutfactor
+=
+5
+#
+Slow
+on
+Android
 tags
 =
 "
@@ -261,6 +275,13 @@ test_MigratePendingPings
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Android
 [
 "
 test_PingAPI
@@ -268,6 +289,13 @@ test_PingAPI
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Android
 [
 "
 test_PingSender
@@ -525,6 +553,13 @@ test_TelemetryController_idle
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Android
 [
 "
 test_TelemetryEnvironment
@@ -532,6 +567,13 @@ test_TelemetryEnvironment
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Windows
 skip
 -
 if
@@ -729,6 +771,13 @@ test_TelemetrySend
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Windows
 skip
 -
 if
@@ -843,6 +892,13 @@ test_TelemetrySession_activeTicks
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+Android
 [
 "
 test_TelemetryTimestamps
