--- a/security/manager/ssl/tests/unit/xpcshell.toml
+++ b/security/manager/ssl/tests/unit/xpcshell.toml
@@ -1593,6 +1593,15 @@ test_ocsp_timeout
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Windows
 run
 -
 sequentially
@@ -2077,6 +2086,13 @@ test_sss_sanitizeOnShutdown
 js
 "
 ]
+requesttimeoutfactor
+=
+3
+#
+Slow
+on
+condprof
 prefs
 =
 [
@@ -2160,6 +2176,13 @@ test_sss_sanitizeOnShutdown_v2
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+condprof
 prefs
 =
 [
