--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.toml
@@ -29,6 +29,16 @@ test_ext_webRequest_responseBody
 js
 "
 ]
+requesttimeoutfactor
+=
+2
+#
+Slow
+on
+Linux
+and
+Android
+debug
 [
 "
 test_ext_webRequest_startup_StreamFilter
