--- a/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.toml
+++ b/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.toml
@@ -1705,6 +1705,39 @@ test_peerConnection_remoteRollback
 html
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+&
+&
+os_version
+=
+=
+'
+14
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1883535
+]
 [
 "
 test_peerConnection_removeAudioTrack
