Bug 1993323: Adding nimbus configurations for the default browser prompt r=android-reviewers,gmalekpour,twhite
Differential Revision: https://phabricator.services.mozilla.com/D268031

UltraBlame original commit: 7594c1647b5ca26827a67e73f8569c62679a8390

--- a/mobile/android/fenix/app/nimbus.fml.yaml
+++ b/mobile/android/fenix/app/nimbus.fml.yaml
@@ -5594,6 +5594,120 @@ Boolean
 default
 :
 false
+default
+-
+browser
+-
+prompt
+:
+description
+:
+Feature
+that
+controls
+when
+the
+default
+browser
+prompt
+is
+shown
+.
+variables
+:
+enabled
+:
+description
+:
+Whether
+or
+not
+to
+enable
+the
+default
+browser
+prompt
+.
+type
+:
+Boolean
+default
+:
+true
+daysBetweenPrompts
+:
+description
+:
+The
+minimum
+number
+of
+days
+between
+showing
+the
+prompt
+.
+type
+:
+Option
+<
+Int
+>
+default
+:
+14
+maxPromptsShown
+:
+description
+:
+The
+maximum
+number
+of
+times
+the
+prompt
+can
+shown
+to
+the
+user
+.
+type
+:
+Option
+<
+Int
+>
+default
+:
+3
+coldStartsBetweenPrompts
+:
+description
+:
+The
+minimum
+number
+of
+cold
+starts
+between
+showing
+the
+prompt
+.
+type
+:
+Option
+<
+Int
+>
+default
+:
+4
 types
 :
 objects
