Bug 694856 - Move browser_plainTextLinks.js to contextMenu test directory as browser_contextmenu_plaintextlinks.js. r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D265853

UltraBlame original commit: 27184923ed2994e71f4f16f77a207060ecaf22a2

--- a/browser/base/content/test/contextMenu/browser.toml
+++ b/browser/base/content/test/contextMenu/browser.toml
@@ -476,6 +476,31 @@ socketprocess_networking
 ]
 [
 "
+browser_contextmenu_plaintextlinks
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+a11y_checks
+"
+]
+#
+Bugs
+1858041
+and
+1835079
+for
+causing
+intermittent
+crashes
+[
+"
 browser_contextmenu_save_blocked
 .
 js
