Bug 1993034: Adding a list of installed addons to the nimbus recorded context r=android-reviewers,rebecatudor273,twhite
Differential Revision: https://phabricator.services.mozilla.com/D268931

UltraBlame original commit: 00fc903041bdaa65228623b606ecd110dbe5b671

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -90652,6 +90652,16 @@ no_shortcuts_or_stories_opt_outs
 type
 :
 boolean
+addon_ids
+:
+type
+:
+array
+items
+:
+type
+:
+string
 description
 :
 |
@@ -90786,6 +90796,26 @@ id
 =
 1991528
 '
+-
+'
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1993034
+'
 data_reviews
 :
 -
@@ -90889,6 +90919,22 @@ mozilla
 com
 /
 D268391
+'
+-
+'
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D268931
 '
 data_sensitivity
 :
