Bug 1994784 - Enable STL hardening on MacOS. r=firefox-build-system-reviewers,nalexander
Currently, STL hardening is only enabled in debug builds, where supported. This
patch enables by default STL hardening for opt MacOS builds.

This patch also makes the build fail on non-debug builds if STL
hardening is not supported, when it is enabled. The goal here is that I don't
want to start accidentally shipping unhardened builds to users. An alternative
would be to leave that code as-is, and instead explicitly enable STL hardening
to the relevant mozconfigs, but I think it is better to make safety checks opt-out
instead of opt-in. I don't expect this will be an issue in practice on MacOS,
but maybe on Linux different distros use a wider variety of STL implementations.

Differential Revision: https://phabricator.services.mozilla.com/D269402

UltraBlame original commit: ca5a75b8a477a67151212e126592af70c89ac240

--- a/toolkit/crashreporter/test/unit/xpcshell.toml
+++ b/toolkit/crashreporter/test/unit/xpcshell.toml
@@ -384,20 +384,29 @@ test_crash_stl
 js
 "
 ]
-run
+skip
 -
 if
 =
 [
 "
 os
-!
+=
 =
 '
 win
 '
+"
+"
+os
+!
+=
+'
+mac
+'
 &
 &
+!
 debug
 "
 ]
@@ -415,6 +424,8 @@ non
 Windows
 debug
 builds
+and
+MacOS
 "
 [
 "
