Bug 1990567 - Use deb12-toolchain-build image for linux python toolchains, r=firefox-build-system-reviewers,glandium
Taskgraph no longer supports Python 3.8. When we try to vendor the
latest version, the Python toolchain builds fail because they're using
Ubuntu 18.04 and have Python 3.8 installed.

Given both Python 3.8 and Ubuntu 18.04, upgrade to deb12-toolchain build
image comes with a more modern Python.

Differential Revision: https://phabricator.services.mozilla.com/D269268

UltraBlame original commit: 6dbb40f74ec938c0333948428c7cab1b403948e7

--- a/taskcluster/kinds/toolchain/python.yml
+++ b/taskcluster/kinds/toolchain/python.yml
@@ -179,11 +179,11 @@ in
 -
 tree
 :
-ubuntu1804
+deb12
+-
+toolchain
 -
 build
--
-python
 }
 linux64
 -
@@ -570,11 +570,11 @@ in
 -
 tree
 :
-ubuntu1804
+deb12
+-
+toolchain
 -
 build
--
-python
 }
 win64
 -
