Revert "Bug 1990567 - [ci] Stop post processing base_ref / base_rev parameters in decision task, r=taskgraph-reviewers,jcristau" for causing toolchain failures
This reverts commit 797144e673b1b39cf921d9421085f3824ca21c0f.

Revert "Bug 1990567 - Use deb12-toolchain-build image for linux python toolchains, r=firefox-build-system-reviewers,glandium"

This reverts commit 3c7154d8304d02b589d3cfaf67acbb769e11b798.

UltraBlame original commit: d96767e86cb2698742921cc6f1bb57096ec47b15

--- a/taskcluster/kinds/docker-image/kind.yml
+++ b/taskcluster/kinds/docker-image/kind.yml
@@ -423,6 +423,32 @@ ubuntu1804
 test
 -
 base
+ubuntu1804
+-
+build
+-
+python
+:
+symbol
+:
+I
+(
+ub18
+-
+build
+-
+python
+)
+parent
+:
+ubuntu1804
+-
+base
+definition
+:
+build
+-
+python
 ubuntu2204
 -
 arm64
