--- a/taskcluster/kinds/toolchain/python.yml
+++ b/taskcluster/kinds/toolchain/python.yml
@@ -179,11 +179,11 @@ in
 -
 tree
 :
-deb12
--
-toolchain
+ubuntu1804
 -
 build
+-
+python
 }
 linux64
 -
@@ -570,11 +570,11 @@ in
 -
 tree
 :
-deb12
--
-toolchain
+ubuntu1804
 -
 build
+-
+python
 }
 win64
 -
