--- a/browser/components/extensions/test/browser/browser.toml
+++ b/browser/components/extensions/test/browser/browser.toml
@@ -1369,6 +1369,38 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+24
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+asan
+"
+#
+Bug
+1697626
+"
+os
+=
+=
+'
 win
 '
 &
