Bug 1959977 - Add tests to make sure we get sourceIndexes correctly r=mstange,profiler-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D259261

UltraBlame original commit: 5c7c0c1bb1895d17a8d9b033cc66945a4ae397e0

--- a/tools/profiler/tests/browser/browser.toml
+++ b/tools/profiler/tests/browser/browser.toml
@@ -65,6 +65,29 @@ html
 ]
 [
 "
+browser_test_feature_js_sourceindex
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+simple
+.
+html
+"
+"
+tracing
+.
+html
+"
+]
+[
+"
 browser_test_feature_jsallocations
 .
 js
@@ -137,11 +160,6 @@ files
 browser_test_feature_jstracing_objtestutils
 .
 snapshot
-.
-mjs
-"
-"
-value_summary_reader
 .
 mjs
 "
