Bug 1979114 - Add some tests for jsSource retrieval r=mstange,profiler-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D259270

UltraBlame original commit: e1651f9258f87512b678aecff7f65cc35aadd882

--- a/tools/profiler/tests/browser/browser.toml
+++ b/tools/profiler/tests/browser/browser.toml
@@ -88,6 +88,34 @@ html
 ]
 [
 "
+browser_test_feature_js_sources_retrieval
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+simple
+.
+html
+"
+"
+page_with_external_js
+.
+html
+"
+"
+external_script
+.
+js
+"
+]
+[
+"
 browser_test_feature_jsallocations
 .
 js
