--- a/devtools/client/performance-new/test/browser/browser.toml
+++ b/devtools/client/performance-new/test/browser/browser.toml
@@ -104,6 +104,15 @@ debugger_assets
 /
 *
 "
+"
+webchannel
+-
+js
+-
+sources
+.
+html
+"
 ]
 skip
 -
@@ -455,6 +464,19 @@ enable
 menu
 -
 button
+.
+js
+"
+]
+[
+"
+browser_webchannel
+-
+get
+-
+js
+-
+sources
 .
 js
 "
