--- a/testing/web-platform/meta/css/cssom/stylesheet-same-origin.sub.html.ini
+++ b/testing/web-platform/meta/css/cssom/stylesheet-same-origin.sub.html.ini
@@ -9,6 +9,50 @@ sub
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+fission
+:
+[
+OK
+TIMEOUT
+]
+[
+Origin
+-
+clean
+check
+in
+cross
+-
+origin
+CSSOM
+Stylesheets
+(
+redirect
+from
+cross
+-
+origin
+to
+same
+-
+origin
+)
+]
+expected
+:
+FAIL
 [
 Origin
 -
