Bug 1959977 - Add tests to make sure we get sourceIndexes correctly r=mstange,profiler-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D259261

UltraBlame original commit: 234ae2fb86555a014c7c79ed8eabb0d8982706ea

--- a/tools/profiler/tests/browser/browser.toml
+++ b/tools/profiler/tests/browser/browser.toml
@@ -65,6 +65,29 @@ html
 ]
 [
 "
+browser_test_feature_js_sourceindex
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+simple
+.
+html
+"
+"
+tracing
+.
+html
+"
+]
+[
+"
 browser_test_feature_jsallocations
 .
 js
