Bug 1994031 - P1: Intro basic action test for IA2. r=Jamie
Swapped description for localizedName, and mirrored localizedName into
description for backwards compat.

Differential Revision: https://phabricator.services.mozilla.com/D268735

UltraBlame original commit: e5a4d6e36e3242510ed1de824d044222d9ce0c71

--- a/accessible/tests/browser/windows/ia2/browser.toml
+++ b/accessible/tests/browser/windows/ia2/browser.toml
@@ -116,6 +116,13 @@ true
 ]
 [
 "
+browser_action
+.
+js
+"
+]
+[
+"
 browser_groupPosition
 .
 js
@@ -145,6 +152,13 @@ js
 [
 "
 browser_scrolling
+.
+js
+"
+]
+[
+"
+browser_systemCaret
 .
 js
 "
