Bug 1994725 - Add maxSdkVersion suppressed UI tests to the legacy configuration r=aaronmt
Added **verifyCopyLoginCredentialsToClipboardTest** to run on the legacy task as it's suppressed to a lower API level.

Removed the suppression from **verifySelectAllPDFTextOptionTest** (it was suppressed in [[ https://phabricator.services.mozilla.com/D220701 | D220701 ]]) and added some missing steps. (most likely it was omitted after we started to asses and fix the suppressed UI tests)

**verifySelectAllPDFTextOptionTest** auccessfully passed 100x on Firebase ✅
All legacy UI tests successfully passed 1x on Firebase ✅

Differential Revision: https://phabricator.services.mozilla.com/D268877

UltraBlame original commit: 9876d03dab5b8da51951eedb79db2235abd5ad9a

--- a/mobile/android/test_infra/flank-configs/fenix/arm-legacy-api-tests.yml
+++ b/mobile/android/test_infra/flank-configs/fenix/arm-legacy-api-tests.yml
@@ -242,6 +242,19 @@ ui
 BookmarksTest
 #
 verifyAddBookmarkButtonTest
+-
+class
+org
+.
+mozilla
+.
+fenix
+.
+ui
+.
+LoginsTest
+#
+verifyCopyLoginCredentialsToClipboardTest
 device
 :
 -
