Bug 1982327 - Add hyphen_compat key to load_aboutcerterror metric measuring errors due to hyphens at start/end of reference ID label r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D269378

UltraBlame original commit: 2ec06b12d4111c5ad66c9adf7487d7f5fc964940

--- a/toolkit/content/metrics.yaml
+++ b/toolkit/content/metrics.yaml
@@ -1023,6 +1023,33 @@ error
 type
 :
 boolean
+hyphen_compat
+:
+description
+:
+>
+If
+the
+error
+is
+due
+to
+wildcard
+trying
+to
+match
+reference
+ID
+label
+with
+hyphen
+at
+begin
+/
+end
+type
+:
+boolean
 telemetry_mirror
 :
 SecurityUiCerterror_Load_Aboutcerterror
