Bug 1992968 - Use fetch-alias to avoid the task duplication. r=jcristau
Differential Revision: https://phabricator.services.mozilla.com/D269556

UltraBlame original commit: 55b2198c15adef261890bcb1890734946d92488d

--- a/taskcluster/kinds/fetch/toolchains.yml
+++ b/taskcluster/kinds/fetch/toolchains.yml
@@ -2032,39 +2032,11 @@ cbindgen
 revision
 :
 eef17769e2739ebb425fee0bbd88e6a52ac2a4e1
-cbindgen
-:
-description
-:
-cbindgen
-0
-.
-29
-.
-1
-source
-code
 fetch
+-
+alias
 :
-type
-:
-git
-repo
-:
-https
-:
-/
-/
-github
-.
-com
-/
-mozilla
-/
 cbindgen
-revision
-:
-eef17769e2739ebb425fee0bbd88e6a52ac2a4e1
 cctools
 -
 port
