Bug 1995527 - Update test expectations for resource-selection-invoke-in-sync-event.html on win and linux opt r=aryx DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D269536

UltraBlame original commit: 53248d6b5824a49a04254469f3ded2073b5280f7

--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-in-sync-event.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-in-sync-event.html.ini
@@ -26,6 +26,22 @@ handlers
 expected
 :
 if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+ccov
+:
+[
+PASS
+FAIL
+]
+if
 not
 debug
 and
@@ -73,15 +89,6 @@ os
 =
 "
 win
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
 "
 )
 :
